# file-manager

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  alembic.ini  conftest.py  docker-compose.dev.yml  entrypoint.sh  example.env  main.py  pyproject.toml  requirements.txt  settings.py  settings.yaml.copy  start.sh
app/: service.py
app/api/dependencies/db/: postgres.py
app/config/: settings.py
app/core/: __init__.py  entity.py  typevars.py
app/crud/db/: base.py
app/db/: __init__.py  base.py  base_class.py  session.py
app/domain/common/: __init__.py  typevars.py
app/domain/common/exceptions/: __init__.py  service.py
app/domain/common/interfaces/: __init__.py  async_db_repository_interface.py  async_db_service_interface.py
app/domain/common/repositories/: __init__.py  sqlalchemy_repository.py
app/domain/common/services/: sqlalchemy_service.py
app/infrastructure/: __init__.py  exceptions.py
app/infrastructure/common/repositories/: exceptions.py  sqlalchemy_repository.py
app/infrastructure/db/: __init__.py  base.py
app/infrastructure/models/: file_system.py
app/models/: file_system.py
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  settings.yaml.copy  start-server.sh
backend/migrations/: env.py
backend/migrations/versions/: 2022-09-20_15-34_add_file_system_node_table.py
backend/src/: service.py
backend/src/api/dependencies/db/: postgres.py
backend/src/config/: settings.py
backend/src/crud/db/: base.py
backend/src/db/: __init__.py  base.py  base_class.py  session.py
backend/src/domain/common/: __init__.py  base_dto.py  entity.py  typevars.py
backend/src/domain/common/exceptions/: __init__.py  database.py
backend/src/domain/common/interfaces/: __init__.py  async_db_repository_interface.py  async_db_service_interface.py  db_repository_interface.py
backend/src/domain/common/repositories/: __init__.py  sqlalchemy_repository.py
backend/src/domain/common/services/: sqlalchemy_service.py
backend/src/domain/file_system/: file_system_node_dto.py
backend/src/models/: file_system.py
backend/src/models/sqlalchemy/: funcs.py
migrations/: env.py
migrations/versions/: 2023-02-08_12-23_file_system_node_table.py  2023-08-10_18-15_file_system_node.py  2023-08-11_06-22_file_system_node.py  2023-09-09_15-20_separate_file_system_node_table.py
src/: main.py  server.py
src/config/: __init__.py  settings.py
src/core/: base_dto.py  base_service.py  exceptions.py
src/core/tests/: test_ok.py  utils.py
src/core/tests/fixtures/: __init__.py  common.py  db.py
src/db/: __init__.py  base.py  base_class.py  session.py
src/dependencies/db/: postgres.py
src/modules/file_system/: models.py
src/modules/file_system/models/: __init__.py  file_system.py
src/utils/sqlalchemy/: funcs.py
