[tool.poetry]
version = "0.1.0"
name = "AWS file manager"
description = "Microservice to implement a file system manager based on AWS with real-world quality."
authors = ["Pavel <prohorenkopavel74@gmail.com>"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]

license = "LICENSE.txt"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
fastapi = "^0.96.0"
pydantic = "^1.10.9"
python-decouple = "^3.8"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.15"
uvicorn = "^0.22.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
flake8-quotes = "^3.3.2"
flake8-absolute-import = "^1.0.0.1"
flake8-bugbear = "^23.6.5"
flake8-cognitive-complexity = "^0.1.0"
flake8-fixme = "^1.1.1"
flake8-pep3101 = "^2.0.0"
flake8-pie = "^0.16.0"
flake8-print = "^5.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-pytest-style = "^1.7.2"
flake8-simplify = "^0.20.0"
flake8-use-fstring = "^1.4"
flake8-variables-names = "^0.0.5"
dotenv-linter = "^0.4.0"
black = "^23.3.0"
isort = "^5.12.0"
ipython = "^8.14.0"
flake8-fastapi = "^0.7.0"
pyupgrade = "^3.4.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["migrations"]

[tool.black]
exclude = '''
/(
  | migrations
)/
'''
line_length = 120

[tool.flake8]
exclude = [
    "migrations",
]
max_line_length = 120
inline-quotes = "\""

[tool.mypy]
python_version = 3.11
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["migrations"]
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
warn_unreachable = true
