[project]
name = "AWS file manager"
description = "Microservice to implement a file system manager based on AWS with real-world quality."
authors = [
    {name = "Pavel Prokhorenko", email="rohorenkopavel74@gmail.com"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dynamic = ["dependencies", "version"]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
homepage = "https://github.com/pavelprokhorenko/file-manager"
documentation = "https://github.com/pavelprokhorenko/file-manager"
repository = "https://github.com/pavelprokhorenko/file-manager"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
known_first_party = ["src"]
line_length = 88
